syntax = "proto3";
// 指定输出包
option java_package = "com.daken.raft.core";
// 指定输出类名为Protos，合起来输出类为 raft.core.Protos
option java_outer_classname = "Protos";

message RequestVoteRpc {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteResult {
  int32 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRpc {
  string message_id = 1;
  int32 term = 2;
  string leader_id = 3;
  int32 prev_log_index = 4;
  int32 prev_log_term = 5;
  int32 leader_commit = 6;

  message Entry {
    int32 kind = 1;
    int32 index = 2;
    int32 term = 3;
    bytes command = 4;
  }

  repeated Entry entries = 7;
}

message AppendEntriesResult {
  string rpc_message_id = 1;
  int32 term = 2;
  bool success = 3;
}


message NodeEndpoint {
  string id = 1;
  string host = 2;
  int32 port = 3;
}



message InstallSnapshotRpc {
  int32 term = 1;
  string leader_id = 2;
  int32 last_index = 3;
  int32 last_term = 4;
  repeated NodeEndpoint last_config = 5;
  int32 offset = 6;
  bytes data = 7;
  bool done = 8;
}

message InstallSnapshotResult {
  int32 term = 1;
}

message SnapshotHeader {
  int32 last_index = 1;
  int32 last_term = 2;
  repeated NodeEndpoint last_config = 3;
}